--- a/lab9/requirements_owl2vec.txt
+++ b/lab9/requirements_owl2vec.txt
@@ -1,8 +1,11 @@
 #Jupyter notebook
 jupyter==1.0.0
-rdflib>=4.2.2
+rdflib==7.0.0
 pyparsing==2.4.7
-gensim>=3.8.0
-scikit-learn~=0.24.2
-nltk~=3.5
-OWLready2>=0.25
+scipy==1.12.0
+numpy==1.26.4 
+gensim==4.3.1
+scikit-learn==1.4.0
+nltk==3.8.1
+OWLready2==0.45
+setuptools==69.2.0
