--- a/lab9/requirements_owl2vec.txt
+++ b/lab9/requirements_owl2vec.txt
@@ -2,6 +2,7 @@
 jupyter==1.0.0
 rdflib==7.0.0
 pyparsing==2.4.7
+#Version 1.12.0 required instead of 1.13.0
 scipy==1.12.0
 numpy==1.26.4 
 gensim==4.3.1
